lil bro doesnt make sure hes actually greened the test when he does tdd. lil bro makes breaking changes on accident. (I have no idea what all is in this commit but I am nearly done except some annoying spacing things that dont look quite right.)

--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,13 @@ body {
     color: #111;
     font-family: 'EB Garamond';
     margin: 10ch auto;
-    padding: 1ch;
     max-width: 60ch;
     font-size: 18px;
     line-height: 1.5;
+}
+
+h1 {
+    font-size: 1.17em;
 }
 
 a {
@@ -46,7 +49,7 @@ span {
 }
 
 #main-title {
-    margin: 2em auto;
+    margin: 1.5em auto;
     margin-top: 0;
     text-align: center;
     text-transform: uppercase;
@@ -57,7 +60,16 @@ span {
 }
 
 #sonnet, #footer {
-    width: 60ch;
+    max-width: 60ch;
+}
+
+@media (max-width: 700px) {
+    #container {
+        width: 90vw;
+        min-width: 0;
+        box-sizing: border-box;
+        margin: 1em;
+    }
 }
 
 #sonnet.active {
@@ -70,12 +82,11 @@ span {
 
 #footer {
     border-top: 1px solid black;
+    margin: 1em auto;
     padding: 1em 0;
-    margin: 1em 0;
-    min-height: 2em;
 }
 
-#footer-title {
+#hover-title {
     text-align: center;
     text-transform: capitalize;
 }
@@ -87,10 +98,5 @@ span {
 }
 
 #home {
-    font-size: 1.2em;
-}
-
-h1 {
-    font-weight: normal;
     font-size: 1.2em;
 }
